Manifest/Staging/Frontend/p-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-dev-service
  namespace: staging
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: frontend-dev
  type: ClusterIP
